Allow the project to compile as automatic modules.
git-svn-id: https://svn.apache.org/repos/asf/sis/branches/JDK9@1803064 13f79535-47bb-0310-9956-ffa450edef68